fix spacing and other issues

--- a/assets/styles/pages/_all-pages.scss
+++ b/assets/styles/pages/_all-pages.scss
@@ -226,8 +226,7 @@ a.skip-main:focus {
     margin-bottom: 0px;
 }
 
-/*
-.app-step-nav__step:last-child .app-step-nav__header{
-    border-bottom: 1px solid #bfc1c3;
+.service-msg-content{
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
-*/
